[package]
name = "wut-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nixigaj/wut"

[dependencies]
axum = "0.7.3"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
hyper = "1.1.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
