[package]
name = "wut-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nixigaj/wut"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
env_logger = "0.11.1"
futures-util = "0.3.29"
hyper = { version = "0.14.28", features = ["full"] }
hyper-rustls = "0.24.2"
log = "0.4.20"
rustls = "0.21.10"
rustls-pemfile = "1.0.4"
tokio = { version = "1.34.0", features = ["full"] }
tokio-rustls = "0.24.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
